# limit-order-book-

./: .gitignore  CMakeLists.txt  Makefile  PRD.md  README.md  limit_order_book_PRD.md
data/: sample_orders.csv  synthetic_orders.csv
docs/: app.js  index.html  styles.css
docs/data/: sample_orders.trace.json
include/: Benchmark.hpp  CsvParser.hpp  Order.hpp  OrderBook.hpp  Replay.hpp  SyntheticOrderGenerator.hpp  Trade.hpp
src/: Benchmark.cpp  CsvParser.cpp  OrderBook.cpp  SyntheticOrderGenerator.cpp  generator_main.cpp  main.cpp
tests/: OrderBookTests.cpp
